tests/parsing/smtlib/mcil/errors/239_define-system_bad_attribute_4.mcil
(define-system system :init (= 1 1) :query)